--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
             <version>42.5.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>spring-mvc-crud-course</finalName>
