--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,6 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-/src/main/resources/database.properties
-
 ### IntelliJ IDEA ###
 .idea/modules.xml
 .idea/jarRepositories.xml
@@ -37,4 +35,6 @@ build/
 .vscode/
 
 ### Mac OS ###
-.DS_Store
+.DS_Store!/src/main/resources/hibernate.properties!/src/main/resources/hibernate.properties
+
+!/src/main/resources/hibernate.properties
