--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <name>spring-mvc-crud-course Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <properties>
-        <spring.version>5.3.24</spring.version>
+        <spring.version>5.3.5</spring.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
@@ -91,6 +91,14 @@
             <artifactId>spring-jdbc</artifactId>
             <version>${spring.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jpa -->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>2.4.7</version>
+        </dependency>
+
 
         <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
         <dependency>
